tests/idris2/error/perror033/DeclIndent.idr
namespace A
  test : (x : Type -> Type) -> Type
  test x =
 x Type
